--- a/content/publication/3.md
+++ b/content/publication/3.md
@@ -1,6 +1,6 @@
 +++
 title = "Automatic Skin Lesion Segmentation for Melanoma Detection using CNN, ISIC 2017 Challenge"
-date = ""
+date = "2017-02-02"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = []
