--- a/content/publication/4.md
+++ b/content/publication/4.md
@@ -1,6 +1,6 @@
 +++
 title = "Brain tumor classification using convolutional neural networks"
-date = ""
+date = "2017-02-02"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = []
