--- a/content/publication/5.md
+++ b/content/publication/5.md
@@ -1,6 +1,6 @@
 +++
 title = "Retinal Vessel Segmentation in Color Fundus Images"
-date = ""
+date = "2017-02-02"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = []
