--- a/content/publication/6.md
+++ b/content/publication/6.md
@@ -1,6 +1,6 @@
 +++
 title = "{Tool for Automated Pectoral Muscle Segmentation in Digital Mammograms using OpenCV"
-date = ""
+date = "2017-02-02"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = []
