--- a/content/publication/2.md
+++ b/content/publication/2.md
@@ -1,6 +1,6 @@
 +++
 title = "Web Application Based Automatic Classification of Skin Cancer using CNN, ISIC 2017 Challenge"
-date = ""
+date = "2017-02-02"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = []
