--- a/content/publication/7.md
+++ b/content/publication/7.md
@@ -1,6 +1,6 @@
 +++
 title = "Heart Flow Analysis in ECG-gated Cardiac Ultrasound Images using MATLAB"
-date = ""
+date = "2017-02-02"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = []
