--- a/content/publication/8.md
+++ b/content/publication/8.md
@@ -1,6 +1,6 @@
 +++
 title = "Design, Measurement and Performance Enhancement of a Miniaturized Implantable Antenna for Biomedical Applications "
-date = ""
+date = "2017-02-02"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = []
